--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^4.3.7",
+    "@tanstack/react-query": "^5.90.11",
+    "@web3modal/wagmi": "^5.1.11",
     "next": "16.0.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "viem": "^2.40.3",
+    "wagmi": "^3.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
