--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^4.3.7",
-    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query": "^5.90.21",
     "@web3modal/wagmi": "^5.1.11",
-    "next": "16.0.4",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "viem": "^2.40.3",
-    "wagmi": "^3.0.1"
+    "next": "16.0.11",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "viem": "^2.46.2",
+    "wagmi": "3.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.4",
-    "tailwindcss": "^4",
+    "eslint-config-next": "16.0.11",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
