--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^4.3.7",
+    "axios": "^1.7.0",
     "@tanstack/react-query": "^5.90.21",
     "@web3modal/wagmi": "^5.1.11",
     "next": "16.0.11",
