--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@coinbase/wallet-sdk": "^4.3.7",
-    "axios": "^1.7.0",
+    "@reown/appkit": "^1.8.0",
+    "@reown/appkit-adapter-wagmi": "^1.8.0",
     "@tanstack/react-query": "^5.90.21",
-    "@web3modal/wagmi": "^5.1.11",
     "next": "16.0.11",
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "viem": "^2.46.2",
-    "wagmi": "3.0.1"
+    "wagmi": "^2.13.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
